docs/0.17/_sources/api/gammapy.modeling.models.GaussianSpatialModel.rst.txt
GaussianSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: GaussianSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GaussianSpatialModel.covariance
      ~GaussianSpatialModel.default_parameters
      ~GaussianSpatialModel.e
      ~GaussianSpatialModel.evaluation_radius
      ~GaussianSpatialModel.lat_0
      ~GaussianSpatialModel.lon_0
      ~GaussianSpatialModel.parameters
      ~GaussianSpatialModel.phi
      ~GaussianSpatialModel.phi_0
      ~GaussianSpatialModel.position
      ~GaussianSpatialModel.position_error
      ~GaussianSpatialModel.sigma
      ~GaussianSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~GaussianSpatialModel.__call__
      ~GaussianSpatialModel.copy
      ~GaussianSpatialModel.create
      ~GaussianSpatialModel.evaluate
      ~GaussianSpatialModel.evaluate_geom
      ~GaussianSpatialModel.from_dict
      ~GaussianSpatialModel.from_parameters
      ~GaussianSpatialModel.integrate
      ~GaussianSpatialModel.plot
      ~GaussianSpatialModel.plot_error
      ~GaussianSpatialModel.to_dict
      ~GaussianSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: e
   .. autoattribute:: evaluation_radius
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: sigma
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: to_dict
   .. automethod:: to_region
